tests/paczka1/fuzzy1/16580966.err
Error in line 4: S88 S88 48,9
Error in line 7: SmOjRMfJ9T S330 11,1
Error in line 9: Yaxgn0Hm8 S330 72,6
Error in line 5: S88 S330 99,6
Error in line 1: yaD A10 99,9
Error in line 10: Yaxgn0Hm8 S88 76,5
Error in line 12: YAY4dEYcRZ S88 17,3
Error in line 26: Yaxgn0Hm8 S88 42,u
Error in line 17: Yaxgn0Hm8 A10 53,0
Error in line 21: YAY4dEYcRZ S916 2,5
Error in line 29: yaD S88 88,3
Error in line 35: SmOjRMfJ9T A10 45,6
